# ArchiModule

./: API_MIGRATION_SUMMARY.md  ArchiContextWindow.FCMacro  ArchiContextWindow.py  ArchiGlobal.h  CMakeLists.txt  CmakeLists.txt  FRONTEND_3D_MODEL_MANUAL.md  Init.py  InitGui.py  PathGlobal.h  README.md  compile_macros.sh  converter.py  requirements.txt  test_forum.FCMacros
App/: AppArchi.cpp  AppArchi.h  Authentication.cpp  Authentication.h  CMakeLists.txt  Command.cpp  Command.h  CommandPy.xml  CommandPyImp.cpp  PreCompiled.h
EngineHandlers/: align_logos.py  freecadsplash0_2x.ai
Gui/: ArchiGui.cpp  ArchiGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.cpp  PreCompiled.h  ProjectContext.py  ProjectContextWindow.cpp  ProjectContextWindow.h  VideoPlayerWidget.cpp  VideoPlayerWidget.h  Workbench.cpp  Workbench.h
Gui/Resources/: Archi.qrc  Archi_rc.py  Palette.XML
Gui/Resources/3d/: scene.gltf
Tools/: Authentication.py  ConvertPNG.py  Exporting.py  FullView.py  GalleryUtils.py  ImageViewer.py  MasterAPI.py  Models.py  ProjectContext.py  View3d.py  __init__.py  log.py
Tools/3d-editor-main/: main.py
Tools/ProjectContext/: ProjectContextCommand.py  ProjectContextWindow.py  __init__.py
Tools/ProjectContext/Pipelines/: DownloadModelBehaviour.py  FormWindow.py  Gen2dBehaviour.py  PrepareFor2dGen.py  PrepareFor3dGen.py  __init__.py
Tools/ProjectContext/Utils/: ImageUtils.py  ProjectBehaviourBase.py  __init__.py
Tools_tmp/: Exporting.py  log.py
experiments/: floor_detection_1_experiment.ipynb  levels_detected.csv  surface_reconstruction_1_experiment.ipynb  surface_reconstruction_2_experiment.ipynb
tools/: Models.py  ProjectContext_OLD.py  __init__.py  config.py  convert_png.py  exporting.py  full_view.py  gallery_utils.py  image_viewer.py  log.py  master_api.py  models.py  video_player.py  view_3d.py
tools/authentication/: __init__.py  authentication.py  authentication_window.py
tools/experiments/: floor_detection_1_experiment.ipynb  video_generation.ipynb  video_generation.py
tools/project_context/: __init__.py  project_context_command.py  project_context_window.py
tools/project_context/pipelines/: __init__.py  download_3d_behaviour.py  download_model_behaviour.py  form_window.py  gen_2d_behaviour.py  prepare_for_2d_gen.py  prepare_for_3d_gen.py  prepare_for_3d_gen_old.py
tools/project_context/pipelines/gen_2d/: __init__.py  behaviour.py  prepare.py
tools/project_context/pipelines/gen_3d/: __init__.py  behaviour.py  prepare.py
tools/project_context/pipelines/gen_video/: __init__.py  behaviour.py  prepare.py
tools/project_context/utils/: __init__.py  gallery_utils.py  image_utils.py  multiview_widgets.py  widgets.py
